Desenvolvimento do Html

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meus Links</title>
+    <title>My Links</title>
 </head>
 <body>
     <div>
+        <img src="/pensamentos pensantes.jpg" alt="Ninguém sabe como tá a mente do palhaço (Imagem da criadora da página, Isabelli Pedrosa)">
         <h1>Isabelli Pedrosa</h1>
+        <p>São Paulo, Brazil</p>
     </div>
 </body>
 </html>
