Termino do desenvolvimento do Html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
         <img src="/pensamentos pensantes.jpg" alt="Ninguém sabe como tá a mente do palhaço (Imagem da criadora da página, Isabelli Pedrosa)">
         <h1>Isabelli Pedrosa</h1>
         <p>São Paulo, Brazil</p>
+
+        <p>"Virada no pensamento de Nietzsche, amante de horror"</p>
+
+        <a href="https://github.com/IsabelliPedrosa">GitHub</a>
+        <a href="https://pin.it/1yLALNUp5">Pinterest</a>
+        <a href="https://open.spotify.com/playlist/1cXIW7oEt9Db0cUl2PK2u1?si=3Ib4CBnPTMaowXNqJU99hg&pi=u-mmMU6MhCQb6_">Spotify</a>
+        <a href="https://www.tiktok.com/@yakibee?_t=8kSuzYOF2rV&_r=1">TikTok</a>
+        <a href="https://www.instagram.com/yakiibee?igsh=bno3Z292cGdsZXJy&utm_source=qr">Instagram</a>
     </div>
 </body>
 </html>
