Continuação do desenvolvimento CSS e alteração de um paragrafo do Html para strong

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div>
         <img src="/pensamentos pensantes.jpg" alt="Ninguém sabe como tá a mente do palhaço (Imagem da criadora da página, Isabelli Pedrosa)">
         <h1>Isabelli Pedrosa</h1>
-        <p>São Paulo, Brazil</p>
+        <strong>São Paulo, Brazil</strong>
 
         <p>"Virada no pensamento de Nietzsche, amante de horror"</p>
 
