Adicionado o atributo target para as ancoras, projeto finalizado

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
         <p>"Virada no pensamento de Nietzsche, amante de horror"</p>
 
-        <a href="https://github.com/IsabelliPedrosa">GitHub</a>
-        <a href="https://pin.it/1yLALNUp5">Pinterest</a>
-        <a href="https://open.spotify.com/playlist/1cXIW7oEt9Db0cUl2PK2u1?si=3Ib4CBnPTMaowXNqJU99hg&pi=u-mmMU6MhCQb6_">Spotify</a>
-        <a href="https://www.tiktok.com/@yakibee?_t=8kSuzYOF2rV&_r=1">TikTok</a>
-        <a href="https://www.instagram.com/yakiibee?igsh=bno3Z292cGdsZXJy&utm_source=qr">Instagram</a>
+        <a href="https://github.com/IsabelliPedrosa" target="_blank">GitHub</a>
+        <a href="https://pin.it/1yLALNUp5" target="_blank">Pinterest</a>
+        <a href="https://open.spotify.com/playlist/1cXIW7oEt9Db0cUl2PK2u1?si=3Ib4CBnPTMaowXNqJU99hg&pi=u-mmMU6MhCQb6_" target="_blank">Spotify</a>
+        <a href="https://www.tiktok.com/@yakibee?_t=8kSuzYOF2rV&_r=1" target="_blank">TikTok</a>
+        <a href="https://www.instagram.com/yakiibee?igsh=bno3Z292cGdsZXJy&utm_source=qr" target="_blank">Instagram</a>
     </div>
 </body>
 </html>
